# 4EnRaya

./: .gitignore  CMakeLists.txt  Clases  Documentacion.md  README.md  run-clang-format.sh
include/: App.hh  Frame.hh  IJugador.hh  JugadorHumano.hh  JugadorIaDificil.hh  JugadorIaFacil.hh  Menu.hh  Tablero.hh
src/: App.cpp  CMakeLists.txt  Frame.cpp  IJugador.cpp  Info.plist  JugadorHumano.cpp  JugadorIaDificil.cpp  JugadorIaFacil.cpp  Menu.cpp  Tablero.cpp  main.cpp
tests/: CMakeLists.txt  test_aaa.cpp  test_jugadorDificil.cpp  test_jugadorFacil.cpp  test_jugadores.cpp  test_tablero.cpp
